force-app/main/default/objects/sugati__Vamoos_Setting__c/sugati__Vamoos_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Vamoos Setting</label>
</CustomObject>