force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__ATOLCertificate_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__ATOLCertificate_Site_URL__c</fullName>
    <label>ATOLCertificate Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>