force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Authentication_Token__c.field-meta.xml
<CustomField>
    <fullName>sugati__Authentication_Token__c</fullName>
    <label>Authentication Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>