force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Day_Offset__c.field-meta.xml
<CustomField>
    <fullName>sugati__Day_Offset__c</fullName>
    <inlineHelpText>Add an offset in the days pushed into the Vamoos from the Sugati</inlineHelpText>
    <label>Day Offset</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>