force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Default_Branding_Profile__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Branding_Profile__c</fullName>
    <label>Default Branding Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>