force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Destination_Document_URL_2__c.field-meta.xml
<CustomField>
    <fullName>sugati__Destination_Document_URL_2__c</fullName>
    <label>Destination Document URL 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>