force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Destination_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__Destination_Title__c</fullName>
    <label>Destination Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>