force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Enable_Branding_Profile__c.field-meta.xml
<CustomField>
    <fullName>sugati__Enable_Branding_Profile__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Branding Profile</label>
    <type>Checkbox</type>
</CustomField>