force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__End_Point__c.field-meta.xml
<CustomField>
    <fullName>sugati__End_Point__c</fullName>
    <label>End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>