force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__First_Name_Location__c.field-meta.xml
<CustomField>
    <fullName>sugati__First_Name_Location__c</fullName>
    <label>First Name Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>