force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__Holiday_Type__c</fullName>
    <label>Holiday Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>