force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Image_Keyword__c.field-meta.xml
<CustomField>
    <fullName>sugati__Image_Keyword__c</fullName>
    <inlineHelpText>A term which is used for searching the default image for a Sugati component pushed into the Vamoos.</inlineHelpText>
    <label>Image Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>