force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Include_Itinerary_Description__c.field-meta.xml
<CustomField>
    <fullName>sugati__Include_Itinerary_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Itinerary Description</label>
    <type>Checkbox</type>
</CustomField>