force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__ItineraryPDF_Site_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__ItineraryPDF_Site_URL__c</fullName>
    <label>ItineraryPDF Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>