force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__List_Of_Record_Types__c.field-meta.xml
<CustomField>
    <fullName>sugati__List_Of_Record_Types__c</fullName>
    <inlineHelpText>Every record type should start from a new line.</inlineHelpText>
    <label>List Of Record Types</label>
    <type>TextArea</type>
</CustomField>