force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Ref_Code__c.field-meta.xml
<CustomField>
    <fullName>sugati__Ref_Code__c</fullName>
    <label>Ref Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>