force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Site_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Site_URL__c</fullName>
    <inlineHelpText>The site which is hosting the documents for Vamoos.</inlineHelpText>
    <label>Site URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>