force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Story_Board_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Story_Board_Field_Set_Name__c</fullName>
    <inlineHelpText>Name of the fieldset which need to be used for showing the columns in the storyboard. If it&apos;s blank then the system will use the &quot;Vamoos_Story_Board&quot; as the default name.</inlineHelpText>
    <label>Story Board Field Set Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>