force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Travel_Document_Name_1__c.field-meta.xml
<CustomField>
    <fullName>sugati__Travel_Document_Name_1__c</fullName>
    <label>Travel Document Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>