force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Travel_Document_Site_URL_2__c.field-meta.xml
<CustomField>
    <fullName>sugati__Travel_Document_Site_URL_2__c</fullName>
    <label>Travel Document Site URL 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>