force-app/main/default/objects/sugati__Vamoos_Setting__c/fields/sugati__Vamoos_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Vamoos_URL__c</fullName>
    <label>Vamoos URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>